--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
     "xmlhttprequest": "^1.8.0"
   }
 }
