--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.9.6",
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
+    "nodemailer": "^6.10.0",
     "xmlhttprequest": "^1.8.0"
   }
 }
