issue with mail process solved, recaptcha added to register page

--- a/.env.demo
+++ b/.env.demo
@@ -7,3 +7,7 @@ SESSION_SECRET=
 BREVO_SMTP_USER=
 BREVO_SMTP_PASS=
 BASE_URL=
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
+SENDER_EMAIL=
+BREVO_API_KEY=
