--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-flash": "^0.0.2",
     "express-rate-limit": "^7.5.0",
     "express-recaptcha": "^5.1.0",
     "express-session": "^1.18.1",
